; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/tests/extr_url.c_main.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/tests/extr_url.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"baz\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"/foo/bar\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"../baz\00", align 1
@.str.3 = private unnamed_addr constant [5 x i8] c"/baz\00", align 1
@.str.4 = private unnamed_addr constant [19 x i8] c"http://server/foo/\00", align 1
@.str.5 = private unnamed_addr constant [22 x i8] c"http://server/foo/bar\00", align 1
@.str.6 = private unnamed_addr constant [26 x i8] c"http://server/foo/bar/123\00", align 1
@.str.7 = private unnamed_addr constant [10 x i8] c"../../baz\00", align 1
@.str.8 = private unnamed_addr constant [18 x i8] c"https://other/url\00", align 1
@.str.9 = private unnamed_addr constant [47 x i8] c"http://server/foo/bar?param=value/with/slashes\00", align 1
@.str.10 = private unnamed_addr constant [39 x i8] c"http://server/foo/bar?param&otherparam\00", align 1
@.str.11 = private unnamed_addr constant [11 x i8] c"?someparam\00", align 1
@.str.12 = private unnamed_addr constant [12 x i8] c"//other/url\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %2 = call i32 @test(i8* null, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %3 = call i32 @test(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %4 = call i32 @test(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0))
  %5 = call i32 @test(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0))
  %6 = call i32 @test(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %7 = call i32 @test(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.5, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %8 = call i32 @test(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0))
  %9 = call i32 @test(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.6, i64 0, i64 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.7, i64 0, i64 0))
  %10 = call i32 @test(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.6, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0))
  %11 = call i32 @test(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.6, i64 0, i64 0), i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.8, i64 0, i64 0))
  %12 = call i32 @test(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.9, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0))
  %13 = call i32 @test(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.10, i64 0, i64 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.11, i64 0, i64 0))
  %14 = call i32 @test(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.5, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.12, i64 0, i64 0))
  ret i32 0
}

declare dso_local i32 @test(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
